# maybankpdf2json

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md
maybankpdf2json/: __init__.py  extractor.py  utils.py
tests/: test_extractor.py
