[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maybankpdf2json"
version = "0.2.2"
description = "A package for extracting JSON data from Maybank PDF account statements"
authors = [{ name = "Nordin", email = "vipnordin@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
urls = { "Homepage" = "https://github.com/nordinz7/maybankpdf2json" }
keywords = [
    "maybank",
    "pdf",
    "JSON",
    "account statements",
    "Email delivery statement",
    "Malayan Banking",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pdfplumber>=0.7.4"]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["maybankpdf2json"]
